K8s/base/ingress/voting-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: voting
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /favicon.ico
        pathType: Exact
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80
